[gd_scene load_steps=6 format=3 uid="uid://dp6tt1fw86y0q"]

[ext_resource type="Script" path="res://menu_levels.gd" id="1_38up1"]
[ext_resource type="Texture2D" uid="uid://356qs3vbh8rc" path="res://fon_340kh200.png" id="2_ko5p3"]
[ext_resource type="Texture2D" uid="uid://cvt3lxj7fu3t2" path="res://korobka2.png" id="3_1o7f3"]
[ext_resource type="AudioStream" uid="uid://7r13my63if73" path="res://Sounds/background_music.mp3" id="4_fomhm"]
[ext_resource type="FontFile" uid="uid://cjqi56wal05sq" path="res://Fonts/agat-8_Regular.ttf" id="4_rrcoj"]

[node name="Levels" type="CanvasLayer"]
script = ExtResource("1_38up1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 380.0
offset_bottom = 240.0
texture = ExtResource("2_ko5p3")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "←"
icon = ExtResource("3_1o7f3")
flat = true
clip_text = true
icon_alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rrcoj")
text = "Уровни"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Level1" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "1"
icon = ExtResource("3_1o7f3")
flat = true
clip_text = true
icon_alignment = 1

[node name="Level2" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "2"
icon = ExtResource("3_1o7f3")
flat = true
clip_text = true
icon_alignment = 1

[node name="Level3" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "3"
icon = ExtResource("3_1o7f3")
flat = true
clip_text = true
icon_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Level4" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "4"
icon = ExtResource("3_1o7f3")
flat = true
clip_text = true
icon_alignment = 1

[node name="Level5" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "5"
icon = ExtResource("3_1o7f3")
flat = true
clip_text = true
icon_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fomhm")
volume_db = -31.086
autoplay = true
parameters/looping = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Level1" to="." method="_on_level1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer2/Level5" to="." method="_on_level_5_pressed"]
